deamonset.yml
kind: DaemonSet
apiVersion: apps/v1
metadata:
  name: nginx-daemonSet
  namespace: nginx
spec:
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx
          image: nginx:latest
          ports:
            - containerPort: 80
